--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -10,6 +10,8 @@ html, body {
 .header {
     background-color: rgba(0, 0, 0, .4);
     border: .125rem solid rgba(255, 255, 255, .2);
+    position: relative;
+    z-index: 42;
 }
 
 .header__inner {
@@ -69,3 +71,22 @@ html, body {
 .menu .menu__item.menu__item--active, .menu .menu__item:hover {
     background-color:rgba(255, 255, 255, .2);
 }
+
+.intro {
+    background-image: url('../images/intro-bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -5.25rem
+}
+.intro .intro__box {
+
+}
+.intro .intro__box.intro__box--row {}
+.intro .intro__hdl {}
+.intro .intro__lead {}
+.intro .intro__btn {}
