--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -7,6 +7,58 @@ html, body {
     font-size: 16px;
 }
 
+.btn {
+    text-decoration: none;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 700;
+    font-size: .875rem;
+    padding: .625rem 1.875rem;
+    border: .0625rem solid var(--primary-color);
+    border-radius: 2.5rem;
+    transition: all 400ms;
+    display: inline-block;
+    cursor: pointer;
+    box-shadow: 0 .1875rem .375rem  rgba(255, 0, 0, 0.3);
+}
+
+.btn:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border: .0625rem solid var(--secondary-color);
+}
+
+.btn-large {
+    font-size: 1rem;
+    padding: 1.375rem 3.4375rem;
+}
+
+.btn-secondary {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border: .0625rem solid var(--secondary-color);
+}
+
+.btn-secondary:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: .0625rem solid var(--primary-color-color);
+}
+
+.btn-outline {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border: .0625rem solid var(--primary-color);
+}
+
+.btn-outline:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: .0625rem solid var(--secondary-color);
+}
+
 .header {
     background-color: rgba(0, 0, 0, .4);
     border: .125rem solid rgba(255, 255, 255, .2);
@@ -81,12 +133,27 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -5.25rem
+    margin-top: -5.5rem;
+    color: var(--secondary-color);
+    text-align: center;
+    font-family: "Nunito Sans", sans-serif;
 }
 .intro .intro__box {
 
 }
 .intro .intro__box.intro__box--row {}
-.intro .intro__hdl {}
-.intro .intro__lead {}
+.intro .intro__hdl {
+    font-weight: 900;
+    font-size: 5.625rem;
+    text-shadow: 0 .1875rem .375rem rgba(0, 0, 0, .25);
+    margin-bottom: 2.5rem;
+    margin-top: 0;
+}
+.intro .intro__lead {
+    font-weight: 700;
+    font-size: 1rem;
+    max-width: 65.375rem;
+    letter-spacing: 0;
+
+}
 .intro .intro__btn {}
