--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -130,11 +130,11 @@ html, body {
     background-position: center;
     background-size: cover;
     min-height: 100vh;
-
     margin-top: -5.5rem;
     color: var(--secondary-color);
     text-align: center;
     font-family: "Nunito Sans", sans-serif;
+    margin-bottom: 3.875rem;
 }
 .intro .intro__box {
 
@@ -171,4 +171,70 @@ html, body {
     line-height: 1.375;
 
 }
-.intro .intro__btn {}
+
+.box {}
+
+.section {
+    margin-bottom: 6.25rem;
+}
+.section .section__hdl {
+    text-align: center;
+    font-family: "Nunito Sans", sans-serif ;
+    font-weight: 700;
+    font-size: 2.1875rem;
+    position: relative;
+    margin-bottom: 2.5625rem;
+}
+
+.section .section__hdl:before, .section .section__hdl:after {
+    content: '';
+    width: 3.125rem;
+    height: .1875rem;
+    display: inline-block;
+    background-color: var(--primary-color);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: .625rem;
+}
+
+.section .section__hdl:before {
+    margin-left: -.625rem;
+    transform: translateY(-50%) translateX(-100%);
+
+}
+
+.section .section__hdl--ternary {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 400;
+    font-size: 1.1875rem;
+    text-align: left;
+    text-transform: uppercase;
+    color: grey;
+    margin-bottom: 1.25rem;
+}
+.section .section__box {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+.section .section__col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.section .section__img {
+    width: 100%;
+    display: block;
+    margin-bottom: .5625rem;
+}
+.section .section__text {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: .875rem;
+    color: rgba(106, 106, 106, 1);
+    line-height: 1.375;
+    max-width: 16.25rem;
+    margin-bottom: 1rem;
+    margin-top: 0;
+}
