--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -172,7 +172,11 @@ html, body {
 
 }
 
-.box {}
+.box.box--dark {
+    background-color: rgba(40, 39, 44, 1);
+    padding-top: 4.125rem;
+    padding-bottom: 6.25rem;
+}
 
 .section {
     margin-bottom: 6.25rem;
@@ -184,6 +188,11 @@ html, body {
     font-size: 2.1875rem;
     position: relative;
     margin-bottom: 2.5625rem;
+}
+
+.section .section__hdl--secondary {
+    color: var(--secondary-color);
+    margin-bottom: 4.6875rem;
 }
 
 .section .section__hdl:before, .section .section__hdl:after {
@@ -213,6 +222,9 @@ html, body {
     color: grey;
     margin-bottom: 1.25rem;
 }
+
+
+
 .section .section__box {
     display: flex;
     justify-content: space-between;
@@ -223,11 +235,29 @@ html, body {
     flex-direction: column;
     align-items: flex-start;
 }
+
+.section .section__col.section__col--secondary {
+    align-items: center;
+    text-align: center;
+}
+
+.section .section__col.section__col--secondary h3 {
+    text-align: center;
+    color: var(--secondary-color);
+}
+.section .section__col.section__col--secondary p {
+    color: rgba(178, 178, 178, 1);
+}
 .section .section__img {
     width: 100%;
     display: block;
     margin-bottom: .5625rem;
 }
+
+.section .section__img.section__img--secondary {
+    max-width: 10.625rem;
+}
+
 .section .section__text {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
@@ -238,3 +268,6 @@ html, body {
     margin-bottom: 1rem;
     margin-top: 0;
 }
+
+
+.box--dark {}
